/BUS: swiftrem_事务&定时_5阶段2传送_4定时way

--- a/re_knowledge/Bus/bus事务/数据传送方式.md
+++ b/re_knowledge/Bus/bus事务/数据传送方式.md
@@ -8,9 +8,9 @@
 
 <ul>
 
-- 每个传送周期内
-  - first传送地址
-  - second传送数据
+- 每个传送T 内: 
+  - first传送<span style="color: DarkRed;">地址</span>
+  - second传送<span style="color: LightSkyBlue;">数据</span>
 - usually每次只能传输一个字长的数据 (主、从设备之间)
 
 > pro：突发传送的概念（2014），突发传送的时间分析（2012、2013）  
@@ -23,10 +23,10 @@
 
 - 每个传送周期内
   - first传送一个地址
-  - second连续传送多次数据
+  - second <span style="color: LimeGreen;">连续</span>传送多次数据
     - (成组数据)or(连续数据单元)
-    - 后续数据的地址is
-    - 前一个地址的自动增量
+    - 后续数据的<span style="color: DarkRed;">地址</span>is
+      - 前一个地址的自动增量
 <br>
 
 - 每个时钟周期
@@ -39,8 +39,10 @@
 
 <ul>
 
-- 非突发传送的“一个字长数据”:  每次传输操作的单元大小
-- 突发传送的“一个字长信息”:   传输过程中每个时钟周期可以处理的数据量，并且处理可以连续进行。
+- 非突发传送的“一个字长数据”:  
+  - 每次传输操作的单元大小
+- 突发传送的“一个字长信息”:   
+  - 传输过程中每个时钟周期可以处理的数据量，并且处理可以连续进行。
 <br>
 
 </ul>
