--- a/re_knowledge/Bus/bus事务/阶段.md
+++ b/re_knowledge/Bus/bus事务/阶段.md
@@ -5,8 +5,8 @@ Bus transaction
 
 <ul>
 
-- 从请求总线到完成总线使用的<span style="color: green;">操作</span><span style="color: deepskyblue;">序列</span> → 总线事务
-  - 一个总线周期中发生的一系列活动
+- 从请求 <span style="color: Gold;">Bus</span>到完成 <span style="color: Gold;">Bus</span>使用的<span style="color: green;">操作</span><span style="color: deepskyblue;">序列</span> →  <span style="color: Gold;">Bus</span>事务
+  - 一个 <span style="color: Gold;">Bus</span>T中发生的一系列活动
 - typically:
   - 请求操作
   - 仲裁~
@@ -19,19 +19,19 @@ Bus transaction
 <ul>
 
 - 请求阶段
-  - 主设备（CPU或DMA）发出总线传输请求
-  - 获得总线控制权
+  - 主设备（CPU或DMA）发出 <span style="color: Gold;">Bus</span>传输请求
+  - get  <span style="color: Gold;">Bus</span> <span style="color: Gold;">控制</span>权
 -  <span style="color: Gold;">仲裁</span>~
-   - 决定将下一个传输周期的总线使用权 <span style="color: green;">授予</span> 某个申请者
-- 寻址~
-  - 主设备通过总线给出要访问的从设备地址及有关命令
+   - decide NEXT传输周期的 <span style="color: Gold;">Bus</span>使用权 <span style="color: green;">授予</span> 某个申请者
+- 寻<span style="color: DarkRed;">址</span>~
+  - 主设备through <span style="color: Gold;">Bus</span>给出要访问的从设备地址及有关命令
   - 启动从模块
-- 传输~
-  - 主模块和从模块进行数据交换
-  - 可单向或双向进行数据传送
-- 释放~
-  - 主模块的有关信息均从系统总线上撤除
-  - 让出总线使用权
+-  <span style="color: LimeGreen;">传输</span>~
+   - 主模块&从模块 <span style="color: LightSkyBlue;">数据</span>交换
+     - ↑ 单向or双向
+- <span style="color: green;">释放</span>~
+  - 主模块的有关信息均从系统 <span style="color: Gold;">Bus</span>上撤除
+  - <span style="color: green;">让出</span> <span style="color: Gold;">Bus</span>使用权
 
 > pro：非突发传送的时间分析（2023）  
 
