--- a/re_knowledge/Bus/bus定时/分离式定时方式.md
+++ b/re_knowledge/Bus/bus定时/分离式定时方式.md
@@ -7,7 +7,7 @@
 <ul>
 
 - 基本特征
-  - 将总线事务分解为<span style="color: green;">请求</span>和<span style="color: LightSkyBlue;">应答</span>两个子过程
+  - 将 <span style="color: Gold;">Bus</span>事务分解为<span style="color: green;">请求</span>和<span style="color: LightSkyBlue;">应答</span>两个子过程
     - 均为 单方向信息流
     - 每个设备all可变为主设备
 
@@ -15,10 +15,10 @@
 
 <ul>
 
-- 主设备获得总线使用权
-- 发送命令和地址信息
-- 从设备接收信息
-- 主设备立即释放总线
+-  <span style="color: Gold;">主</span>设备 get <span style="color: Gold;">Bus</span>使用权
+   - send 令和地址信息
+- <span style="color: LightSkyBlue;">从</span>设备receive信息
+  - 主设备立即<span style="color: green;">释放</span> <span style="color: Gold;">Bus</span>
 
 </ul>
 
@@ -26,10 +26,10 @@
 
 <ul>
 
-- 从设备准备数据
-- 申请总线使用权
-- 发送准备好的数据
-- 主设备接收数据
+- <span style="color: LightSkyBlue;">从</span>设备准备数据
+  - 申请 <span style="color: Gold;">Bus</span>使用权
+  - send准备好的数据
+-  <span style="color: Gold;">主</span>设备receive数据
 
 </ul>
 
@@ -38,7 +38,7 @@
 <ul>
 
 - 优点
-  - 不传送数据时释放总线
+  - 不传送数据时释放 <span style="color: Gold;">Bus</span>
   - 可接受其他设备请求
   - 无空闲等待时间
 - 缺点
