--- a/re_knowledge/Bus/bus定时/半同步定时.md
+++ b/re_knowledge/Bus/bus定时/半同步定时.md
@@ -5,8 +5,8 @@
 <ul>
 
 - 基本特征
-  - 结合同步和异步定时特点
-  - 信号发出时间参照系统时钟前沿
+  - combine同步 & 异步定时特点
+  - 信号send时间参照<span style="color: LightSkyBlue;">系统</span>时钟前沿
   - 接收方采用系统时钟后沿判断
   - 增设Wait响应信号线
 
