--- a/re_knowledge/Bus/bus定时/同步~.md
+++ b/re_knowledge/Bus/bus定时/同步~.md
@@ -5,11 +5,11 @@
 <ul>
 
 - 一种协议或规则
-  - 用于控制总线双方交换数据时的 <span style="color: green;">时间</span>配合关系
+  - 用于控制 <span style="color: Gold;">Bus</span>双方交换数据时的 <span style="color: green;">时间</span>配合关系
 - 目的
-  - 确保总线双方在数据交换过程中的正确时序配合
+  - 确保 <span style="color: Gold;">Bus</span>双方在数据交换过程中的正确时序配合
   
-> pro：各种总线定时方式的特点（2015、2021）  
+> pro：各种 <span style="color: Gold;">Bus</span>定时方式的特点（2015、2021）  
 
 <ul>
 
@@ -18,17 +18,17 @@
 <ul>
 
 - 基本特征
-  - 采用统一的时钟信号协调发送和接收双方
-  - 时钟产生相等的时间间隔
-  - 每个间隔构成一个总线周期
-  - 一个总线周期可进行一次数据传送
+  - use<span style="color: LightSkyBlue;">统一</span>的时钟信号协调发送和接收双方
+    - 时钟produce相等的时间间隔
+      - every间隔→ <span style="color: Gold;">Bus</span>周期
+    - 一个 <span style="color: Gold;">Bus</span>周期可进行一次数据传送
 
 - 优点
   - 传送速度快，具有较高的传输速率
-  - 总线控制逻辑简单
+  -  <span style="color: Gold;">Bus</span>控制逻辑简单
 - 缺点
-  - 主从设备属于强制性同步
-  - 不能及时进行数据通信的有效性检验
+  - 主从设备属于  <span style="color: Gold;">强制</span>性同步
+  - can't 及时 进行数据通信的有效性检验
   - 可靠性较差
 
 <ul>
@@ -38,10 +38,10 @@
 <ul>
 
 - 特点
-  - 发送方时钟直接控制接收方时钟
-  - 双方完全同步的逐位传输
-  - 仅在数据块头尾添加开始和结束标记
-  - 传输效率高但硬件复杂
+  - 发送方时钟directly  <span style="color: Gold;">控制</span> 接收方时钟
+    - 双方完全同步的逐位传输
+    - only 添加 开始和结束标记 in 数据块头尾
+  - 传输效率高 but 硬件复杂
 
 </ul>
 
