--- a/re_knowledge/Bus/bus定时/异步~.md
+++ b/re_knowledge/Bus/bus定时/异步~.md
@@ -11,12 +11,12 @@
   - 从设备发出"回答"信号
 
 - 优点
-  - 总线周期长度可变
-  - 能保证不同速度设备间可靠信息交换
+  - 总线周期长度 <span style="color: LimeGreen;">可变</span>
+  - can guarantee不同速度设备间可靠信息交换
   - 自动适应时间配合
 - 缺点
-  - 控制较复杂
-  - 速度较慢
+  - 控制较<span style="color: SlateBlue;">复杂</span>
+  - 速度较 <span style="color: Gold;">慢</span>
 
 ### <span style="color: green;">类型</span>
 
