swifttest_过[事务&定时]_对应的选择题

--- a/re_knowledge/Bus/bus定时/异步~.md
+++ b/re_knowledge/Bus/bus定时/异步~.md
@@ -6,9 +6,9 @@
 
 - 基本特征
   - 无统一时钟和固定时间间隔
-  - 依靠传送双方"握手"信号实现定时控制
-  - 主设备提出"请求"信号
-  - 从设备发出"回答"信号
+    - 依靠传送双方" <span style="color: Gold;">握手</span>"信号实现定时控制
+    - 主设备提出"请求"信号
+    - 从设备发出"回答"信号
 
 - 优点
   - 总线周期长度 <span style="color: LimeGreen;">可变</span>
@@ -26,9 +26,10 @@
 
 <ul>
 
-- 主设备不等待回答信号即可撤销请求
-- 从设备自动撤销回答信号
-- 双方无互锁关系
+- 双方无互锁
+  - 主设备不等待 回答信号即可撤销请求
+  - 从设备自动撤销回答信号
+
 
 </ul>
 
@@ -36,9 +37,9 @@
 
 <ul>
 
-- 主设备需等待回答信号后撤销请求
-- 从设备自动撤销回答信号
-- 单向互锁关系
+- 单向互锁
+  - 主设备需等待回答信号后撤销请求
+  - 从设备自动撤销回答信号
 
 </ul>
 
@@ -46,9 +47,10 @@
 
 <ul>
 
-- 主设备需等待回答后撤销请求
-- 从设备需等待请求撤销后撤销回答
-- 双向互锁关系
+- 双向互锁
+  - 主设备需等待回答后撤销请求
+  - 从设备需等待请求撤销后撤销回答
+
 
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/e30f9589c45b2a57c15931e592518bb215f20b47d5abf20d0fd0e062b8376d2f.jpg)  
 图6.4请求和回答信号的互锁  
