I SYSTEM:  swiftrem_ OP+A_(1+4)I格式分类_2OP I格式_(3+2I'操作类型)

--- a/re_knowledge/指令系统/concept/定长操作码指令格式.md
+++ b/re_knowledge/指令系统/concept/定长操作码指令格式.md
@@ -1,20 +1,20 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
-##  <span style="color: silver;"><span style="color: gray;">定长</span>操作码指令格式  
+##  <span style="color: silver;"><span style="color: gray;">定长</span>操作码 <span style="color: LightSkyBlue;">I</span>格式  
 
->pro：定长操作码的指令条数（2015）  
+>pro：定长操作码的 <span style="color: LightSkyBlue;">I</span>条数（2015）  
 <ul>
 
 -  <span style="color: LimeGreen;">操作</span>码位置：
-   - 在指令字的<span style="color: gray;">最高位</span>部分
+   - in <span style="color: LightSkyBlue;">I</span>字的<span style="color: gray;">最高位</span>部分
    - 分配固定的若干位表示
-- 指令系统 <span style="color: GreenYellow;">容量</span>：
-  - n位操作码字段
-  - 最大能够表示$\color{black}2^n$条指令
+-  <span style="color: LightSkyBlue;">I</span>系统 <span style="color: GreenYellow;">容量</span>：
+   - n位操作码字段
+   - 最大能够表示$\color{black}2^n$条 <span style="color: LightSkyBlue;">I</span>
 - 优点：
   - <span style="color: green;">简化</span>计算机硬件设计
-  -  <span style="color: black;">提高</span>指令译码和识别<span style="color: RoyalBlue;">速度
-- 场景：
+  -  <span style="color: black;">提高</span> <span style="color: LightSkyBlue;">I</span>译码和识别<span style="color: RoyalBlue;">速度
+- Scene：
   - 计算机字长较长时的常规用法
     - <span style="color: gray;">32位</span>或<span style="color: gray;">更长</span>字长的系统
 
