--- a/re_knowledge/指令系统/concept/指令的操作类型/数据传送.md
+++ b/re_knowledge/指令系统/concept/指令的操作类型/数据传送.md
@@ -6,10 +6,11 @@
 ### <span style="color: LightSkyBlue;">数据</span><span style="color: green;">传送  
 - 主要指令类型：
   -  <span style="color: LimeGreen;">R</span>之间的传送（MOV）
-  -  <span style="color: LimeGreen;">R</span>→ <span style="color: black;">Memory</span>（LOAD）
-  - <span style="color: LimeGreen;">R</span>← <span style="color: black;">Memory</span>（STORE）
-  - 进栈操作（PUSH）
-  - 出栈操作（POP）
+     -  <span style="color: LimeGreen;">R</span>→ <span style="color: black;">Memory</span>（LOAD）
+     - <span style="color: LimeGreen;">R</span>← <span style="color: black;">Memory</span>（STORE）
+  -  <span style="color: Gold;">stack</span>
+     - 进栈操作（PUSH）
+     - 出栈操作（POP）
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
