--- a/re_knowledge/指令系统/concept/基本格式.md
+++ b/re_knowledge/指令系统/concept/基本格式.md
@@ -4,19 +4,20 @@
 <ul>
 
 ###  <span style="color: silver;">概念
-- 指令
-  - 定义：一条指令 is 机器语言的一个语句
-    - 本质：一组有意义的 <span style="color: black;">二进制</span>代码
-  - 组成部分：
-    -  <span style="color: LimeGreen;">OP</span>+<span style="color: DarkRed;">A</span>
+-  <span style="color: LightSkyBlue;">I</span> 
+   - 定义：
+     - 一条 <span style="color: LightSkyBlue;">I</span>  is 机器语言的一个语句
+     - 本质：一组有意义的 <span style="color: black;">二进制</span>代码
+   - Component：
+     -  <span style="color: LimeGreen;">OP</span>+<span style="color: DarkRed;">A</span>
 
 ####  <span style="color: LimeGreen;">操作</span><span style="color: green;">码</span>   <span style="color: silver;">& <span style="color: DarkRed;">地址</span>码
 - <span style="color: LimeGreen;">操作</span><span style="color: green;">码</span>
-  - 指出该指令应<span style="color: green;">执行</span>什么 <span style="color: GreenYellow;">操作</span>以及具有何种 <span style="color: Gold;">功能</span>
-    - 识别指令
-    - 了解指令功能
-    - 区分操作数地址内容
-  - 例如：
+  - point 该 <span style="color: LightSkyBlue;">I</span> 应<span style="color: green;">执行</span>什么 <span style="color: GreenYellow;">操作</span>以及具有何种 <span style="color: Gold;">功能</span>
+    - 识别 <span style="color: LightSkyBlue;">I</span> 
+    - 了解 <span style="color: LightSkyBlue;">I</span> 功能
+    - distinguish 操作数 地址内容
+  - eg：
     - 运算类型
       - 算术加运算
       - 算术减运算
@@ -24,57 +25,61 @@
       - 程序转移
       - 返回操作
 - <span style="color: silver;"><span style="color: DarkRed;">地址</span>码</span>
-  - 给出被操作的信息（指令或数据）的<span style="color: DarkRed;">地址</span>
-  - 包括：
-    - 参加运算的一个或多个操作数的地址
-    - 运算结果的保存地址
-    - 程序的转移地址
-    - 被调用子程序的入口地址等
+  - 被操作的信息（ <span style="color: LightSkyBlue;">I</span> 或数据）'<span style="color: DarkRed;">地址</span>
+  - include：
+    - 参加运算的一个或多个<span style="color: LimeGreen;">OP</span>' <span style="color: DarkRed;">~</span>
+    - 运算  <span style="color: LimeGreen;">结果</span>的 保存<span style="color: DarkRed;">~</span>
+    - 程序'<span style="color: green;">转移</span><span style="color: DarkRed;">~</span>
+    - 被调用子<span style="color: LightSkyBlue;">程序</span>的  <span style="color: LimeGreen;">入口</span><span style="color: DarkRed;">~</span> ..etc
 
-#### <span style="color: silver;">~ 字长</span>
-- 定义：
-  - 一条指令所包含的 <span style="color: black;">二进制</span><span style="color: gray;">代码</span>的<span style="color: LightSkyBlue;">位数</span>
-- 决定因素：
+#### <span style="color: silver;"><span style="color: LightSkyBlue;">I</span> 字长</span>
+- definition：
+  - 一条 <span style="color: LightSkyBlue;">I</span> 所包含的 <span style="color: black;">二进制</span><span style="color: gray;">代码</span>的<span style="color: LightSkyBlue;">位数</span>
+- determining factor：
   -  <span style="color: LimeGreen;">操作</span>码的长度
   - <span style="color: DarkRed;">地址</span>码的长度、个数
-- 与机器字长的关系：
-  - = 机器字长
-  - or < >机器字长
+- 与机器字长'relation：
+  - =   or < >
 - 分类：
-  - 单字长指令：1 机器字长
-  - 半字长指令： 1/2机器字长
-  - 双字长指令：2*机器字长
-
+  - 单字长 <span style="color: LightSkyBlue;">I</span> ：
+    - 1 机器字长
+  - 半.. ： 
+    - 1/2 ..
+  - 双.. ：
+    - 2* ..
 >attention: 
-- 指令长度不同会影响取指令时间开销：
-  - 单字长指令：
-    - 只需访存1次
-    - 能将指令完整取出
-    - 耗费1个存取周期
-  - 双字长指令：
-    - 需要访存2次
-    - 才能完整取出指令
-    - 耗费2个存取周期
-#### <span style="color: LightSkyBlue;">指令<span style="color: gray;">字</span><span style="color: LimeGreen;">结构</span>
-- 定长指~：
-  - 所有指令的长度都相等
-  - 特点：执行速度快，控制简单
+-  <span style="color: LightSkyBlue;">I</span> 长度不同会影响取 <span style="color: LightSkyBlue;">I</span> 时间开销：
+   - 单字长 <span style="color: LightSkyBlue;">I</span> ：
+     - 访存1次
+       - 将 <span style="color: LightSkyBlue;">I</span> 完整取出
+     - cost 1个存取周期
+   - 双字长 <span style="color: LightSkyBlue;">I</span> ：
+     - ..2..
+       - ..
+     - ..2..
+#### <span style="color: LightSkyBlue;"> <span style="color: LightSkyBlue;">I</span> <span style="color: gray;">字</span><span style="color: LimeGreen;">结构</span>
+- 定长~：
+  - all <span style="color: LightSkyBlue;">I</span> 的长度==
+  - 特点：
+    - 执行速度快，控制简单
 - 变长~：
-  - 各种指令的长度随指令功能而异
-- 注意：因为主存一般是按字节编址的，所以指令字长通常为字节的整数倍
+  - <span style="color: LightSkyBlue;">I</span> 的长度随 <span style="color: LightSkyBlue;">I</span> 功能而异
+  - notice：
+    - 主<span style="color: Gold;">M</span> usually 按<span style="color: LightSkyBlue;">Byte</span>编址
+    - thus  <span style="color: LightSkyBlue;">I</span> 字长usually is 字节' 整数倍
 
->pro：根据指令格式及相关编码条件组合成机器代码（2015）
+>pro：根据 <span style="color: LightSkyBlue;">I</span> 格式及相关编码条件组合成机器代码（2015）
 
-###  <span style="color: silver;">指令格式 <span style="color: LimeGreen;">分类
+###  🌟<span style="color: silver;"> <span style="color: LightSkyBlue;">I</span> 格式 <span style="color: LimeGreen;">分类
 <ul>
 
-#### 零<span style="color: DarkRed;">地址</span><span style="color: LightSkyBlue;">指令</span>
+#### 零<span style="color: DarkRed;">地址</span><span style="color: LightSkyBlue;"> <span style="color: LightSkyBlue;">I</span> </span>
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/6e7552f06b4d8317fc022359d2dcccb811aec4c3314eb4cd1ac1ec714e795bd3.jpg)
 - only <span style="color: LimeGreen;">操作</span>码OP，没有显式地址
 - 两种可能：
-  - 不需要操作数的指令
-    - 如空操作指令、停机指令、关中断指令等
-  - 零地址的运算类指令（用在堆栈计算机中）
+  - 不需要操作数的 <span style="color: LightSkyBlue;">I</span> 
+    - 如空操作 <span style="color: LightSkyBlue;">I</span> 、停机 <span style="color: LightSkyBlue;">I</span> 、关中断 <span style="color: LightSkyBlue;">I</span> 等
+  - 零地址的运算类 <span style="color: LightSkyBlue;">I</span> （用在堆栈计算机中）
     - 参与运算的两个操作数从栈顶和次栈顶弹出
     - 送到运算器进行运算
     - 运算结果压入堆栈
@@ -82,13 +87,13 @@
 ####  <span style="color: silver;">一~
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/f73beb07fd477d00ecf244bb03d345248115ffa6dad3968d55fb69658646a4ca.jpg)
 - 两种常见形态：
-  - 只有目的操作数的<span style="color: SlateBlue;">单</span><span style="color: LimeGreen;">操作</span>数指令：
+  - 只有目的操作数的<span style="color: SlateBlue;">单</span><span style="color: LimeGreen;">操作</span>数 <span style="color: LightSkyBlue;">I</span> ：
     - 执行过程：
       - 按A₁地址读取操作数
       - 进行OP操作后，结果存回原地址
-    - 指令含义：
+    -  <span style="color: LightSkyBlue;">I</span> 含义：
       - OP(A₁)→A₁
-    - 典型指令：
+    - 典型 <span style="color: LightSkyBlue;">I</span> ：
       - 加1
       - 减1
       - 求反
@@ -96,78 +101,78 @@
       - 移位
 
 - ![image](https://bluejedis.github.io/picx-images-hosting/test/image.86tpfzoekp.webp)
-  - 隐含约定目的地址的 <span style="color: Gold;">双</span>~指令：
+  - 隐含约定目的地址的 <span style="color: Gold;">双</span>~ <span style="color: LightSkyBlue;">I</span> ：
     - 执行过程：
-      - 按指令地址A₁读取源操作数
+      - 按 <span style="color: LightSkyBlue;">I</span> 地址A₁读取源操作数
       - ACC（累加器）提供另一个操作数
       - 运算结果存放在ACC中
-    - 指令含义：
+    -  <span style="color: LightSkyBlue;">I</span> 含义：
       - (ACC)OP(A₁)→ACC
 >pro：地址位数与寻址范围的关系（2010、2021）
 
 #####  <span style="color: silver;">寻址<span style="color: green;">范围
-- 若指令字长为32位：
+- 若 <span style="color: LightSkyBlue;">I</span> 字长为32位：
   - 操作码占8位
   - 1个地址码字段占24位
   - 操作数的直接寻址范围为2²⁴=16M
 - <span style="color: green;">访</span><span style="color: Gold;">存</span>次数：
   - 若地址码字段均为主存地址
   - 需要3次访存：
-    - 取指令1次
+    - 取 <span style="color: LightSkyBlue;">I</span> 1次
     - 取操作数<span style="color: gray;">1</span>次
     - 存结果1次
 
 ####  <span style="color: silver;">二~
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/808143d9dc4a64a19f32b18f99d45ecad816da4b5a2564cee34b907da02c8e67.jpg)
-- 指令含义：(A₁)OP(A₂)→A₁
-- 使用场景：
-  - 常用的算术和逻辑运算指令
-  - 需要 2* <span style="color: LimeGreen;">操作</span>数
-  - 目的操作数地址用于保存运算结果
+-  <span style="color: LightSkyBlue;">I</span> 含义：(A₁)OP(A₂)→A₁
+- Usage scenarios：
+  - 常用的算术和逻辑运算 <span style="color: LightSkyBlue;">I</span> 
+  - need 2* <span style="color: LimeGreen;">操作</span>数
+  - 目的操作数地址 for 保存运算结果
 
 #####  <span style="color: silver;">寻址<span style="color: green;">范围
-- 若指令字长为32位：
+- 若 <span style="color: LightSkyBlue;">I</span> 字长为32位：
   - 操作码占8位
   - 两个地址码字段各占12位
   - 每个操作数的直接寻址范围为2¹²=4K
 - <span style="color: green;">访</span><span style="color: Gold;">存</span>次数：
-  - 若地址码字段均为主存地址
-  - 需要4次访存：
-    - 取指令1次
+  - if 地址码字段均为主存地址
+  - need4次访存：
+    - 取 <span style="color: LightSkyBlue;">I</span> 1次
     - 取两个操作数 <span style="color: black;">2</span>次
     - 存结果1次
 
 ####  <span style="color: silver;">三~
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/964f896e4265099daa90e4a7313c3f27dbada8cdcabb04ced0efe9b9d5d4944a.jpg)
-- 指令含义：(A₁)OP(A₂)→A₃
+-  <span style="color: LightSkyBlue;">I</span> 含义：(A₁)OP(A₂)→A₃
 
 #####  <span style="color: silver;">寻址<span style="color: green;">范围
-- 若指令字长为32位：
+- 若 <span style="color: LightSkyBlue;">I</span> 字长为32位：
   - 操作码占8位
   - 3个地址码字段各占8位
   - 每个操作数的直接寻址范围为2⁸=256
 - 访存次数：
   - 若地址码字段均为主存地址
   - 需要4次访存：
-    - 取指令1次
+    - 取 <span style="color: LightSkyBlue;">I</span> 1次
     - 取两个操作数<span style="color: black;">2</span>次
     - 存结果1次
 
 ####  <span style="color: silver;">四~
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/56bca1a6922d69a95d02641971447a3f6f573122ef2321a9000c316913151d9c.jpg)
-- 指令含义：
+-  <span style="color: LightSkyBlue;">I</span> 含义：
   - (A₁)OP(A₂)→A₃
-  - A₄=下一条将要执行指令的地址
+  - A₄=下一条将要执行 <span style="color: LightSkyBlue;">I</span> 的地址
 
 #####  <span style="color: silver;">寻址</span><span style="color: green;">范围
-- 若指令字长为32位：
+- 若 <span style="color: LightSkyBlue;">I</span> 字长为32位：
   - 操作码占8位
   - 4个地址码字段各占6位
   - 每个操作数的直接寻址范围为2⁶=64
 - 访存次数：
   - 若地址码字段均为主存地址
   - 需要4次访存：
-    - 取指令1次
+    - 取 <span style="color: LightSkyBlue;">I</span> 1次
     - 取两个操作数<span style="color: black;">2</span>次
     - 存结果1次
 
