swiftrem_ RISC&CISC

--- a/re_knowledge/指令系统/CISC RISC/比较.md
+++ b/re_knowledge/指令系统/CISC RISC/比较.md
@@ -4,7 +4,7 @@
 
 <ul>
 
-###  <span style="color: silver;"><span style="color: purple;">R</span>ISC的优势
+###  <span style="color: silver;"> <span style="color: LimeGreen;">R</span>ISC的优势
 
 <ul>
 
