swiftrem_ 寻址: 2指令~_数据~:特征字段(标识_EA&A)_type_3(base+间接+偏移)*3+1

--- a/re_knowledge/指令系统/CISC RISC/比较.md
+++ b/re_knowledge/指令系统/CISC RISC/比较.md
@@ -11,16 +11,17 @@
 - VLSI芯片面积利用
   - CISC：控制存储器占CPU芯片面积50%以上
   - RISC：硬布线逻辑只占CPU芯片面积10%左右
-- 运算速度
-  - 指令数、寻址方式和格式种类少
-  - 多个通用寄存器
-  - 采用流水线技术
-- 设计和可靠性
-  - 设计周期短
-  - 逻辑简单，出错概率低
-- 编译优化
-  - 指令类型少，寻址方式少
-  - 便于编译程序选择更有效的指令和寻址方式
+-  <span style="color: LimeGreen;">R</span>ISC
+   - 运算速度
+     - 指令数、寻址方式和格式种类少
+     - 多个通用寄存器
+     - 采用流水线技术
+   - 设计和可靠性
+     - 设计周期短
+     - 逻辑简单，出错概率低
+   - 编译优化
+     - 指令类型少，寻址方式少
+     - 便于编译程序选择更有效的指令和寻址方式
 
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/c72ca4df9a8e8d7fdeb190d640247354dcff3e2ee6fb58e6a641d46da41d6b00.jpg)  
 
