--- a/re_knowledge/指令系统/寻址方式/common数据寻址方式/偏移 寻址类.md
+++ b/re_knowledge/指令系统/寻址方式/common数据寻址方式/偏移 寻址类.md
@@ -40,7 +40,7 @@
 
 - EA = (<span style="color: LightSkyBlue;">B</span><span style="color: LimeGreen;">R</span>) + <span style="color: DarkRed;">A</span>
   - BR+指令字中的形式地址A
-  - 基址寄存器
+  - <span style="color: LightSkyBlue;">基址</span> <span style="color: LimeGreen;">R</span>
     - 可以是专用寄存器或通用寄存器
 
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/a34564d3543b6f2ccacb8cfb471b140348d32097e27bbf6b321ab8f9a9a2be06.jpg)  
@@ -54,22 +54,23 @@
   - 可以 <span style="color: black;">扩大</span>寻址 <span style="color: LimeGreen;">范围
   - 有利于多道程序设计
   - 可用于编制浮动程序
-- 缺点：偏移量 <span style="color: black;">位数</span>较 <span style="color: Gold;">短</span>
+- 缺点：
+  - 偏移量 <span style="color: black;">位数</span>较 <span style="color: Gold;">短</span>
 
 #### <span style="color: green;">变<span style="color: LightSkyBlue;">址</span> <span style="color: silver;">寻址
 >pro：变址寻址的EA的计算（2013），先变址后间址方式的EA的计算（2016）  
 
 - EA = (IX) + A
-- IX+指令字中的形式地址A
-- IX: 变址寄存器
-  - 可用 专用变址寄存器或通用寄存器
+  - IX+指令字中的形式地址A
+  - IX: 变址 <span style="color: LimeGreen;">R</span>
+    - 可用 专用变址寄存器or通用寄存器
 
 >pro：变址寻址的适用场景（2017）  
 
 - 特点
   - 面向 <span style="color: LimeGreen;">user</span>
   - 执行过程中变址寄存器内容可变
-  - 形式地址A不变
+  - 形式地址<span style="color: DarkRed;">A</span>不变
 
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/9f0e1bf068edf0a515fc2ed92442f6f857a8030bab1164982e17c514ba92116c.jpg)  
 图4.10变址寻址  
@@ -78,11 +79,11 @@
 
 - 与<span style="color: LightSkyBlue;">基址</span>寻址的区别
   - 基址寻址
-    - 面向系统
+    - 面向 <span style="color: Gold;">OS</span>
     - 基址寄存器内容不可变
-    - 指令字中A可变
+    - 指令字中<span style="color: DarkRed;">A</span>可变
   - 变址寻址
-    - 面向用户
+    - 面向 <span style="color: LimeGreen;">user</span>
     - 变址寄存器 <span style="color: Gold;">内容</span> <span style="color: black;">可变</span>
     - 指令字中<span style="color: DarkRed;">A</span>不可变
 
