--- a/re_knowledge/指令系统/寻址方式/common数据寻址方式/基本 寻址方式.md
+++ b/re_knowledge/指令系统/寻址方式/common数据寻址方式/基本 寻址方式.md
@@ -12,20 +12,22 @@
 图4.2隐含寻址  
 
 - 优缺点
-  - 优点：有利于缩短指令字长
-  - 缺点：需增加存储操作数或隐含地址的硬件
+  - 优点：
+    - beneficial to缩短指令字长
+  - 缺点：
+    - need to add 存储 <span style="color: LimeGreen;">OP</span> or 隐含地址的<span style="color: green;">硬件</span>
 
 #### <span style="color: LightSkyBlue;">立即</span>（数）~
 >pro：立即寻址的概念（2023）
 
-- 概念
+- concept
   - 指令字中的<span style="color: DarkRed;">地址</span>字段
-    - 不是操作数的地址
+    - not 操作数的地址
     - 而是 <span style="color: LimeGreen;">操作</span>数 <span style="color: black;">本身</span>
       - 也称<span style="color: gray;">立即数
-      - 采用补码表示
-  - #: 立即寻址 <span style="color: Gold;">特征
-  - A:  <span style="color: LimeGreen;">操作</span>数
+      - 补码表示
+  - #: <span style="color: Gold;">特征</span>
+  - A:  <span style="color: LimeGreen;">操作</span>数 (立即数)
 - 优缺点
   - 优点
     - 指令在执行阶段<span style="color: purple;">不</span> <span style="color: LimeGreen;">访 <span style="color: Gold;">存
@@ -43,7 +45,7 @@
     - 简单，不需要专门计算操作数的地址
     - 指令在执行阶段仅需<span style="color: LimeGreen;">访<span style="color: Gold;">存</span> <span style="color: black;">一次
   - 缺点
-    - A的<span style="color: gray;">位数</span> <span style="color: black;">限制了</span>该指令操作数的寻址<span style="color: gray;">范围</span>
+    - A的<span style="color: gray;">位数</span> <span style="color: black;">limit了</span>该指令操作数的寻址<span style="color: gray;">范围</span>
     - 操作数的地址<span style="color: gray;">不易修改
 
 </ul>
