--- a/re_knowledge/指令系统/寻址方式/指令寻址和数据寻址.md
+++ b/re_knowledge/指令系统/寻址方式/指令寻址和数据寻址.md
@@ -4,8 +4,10 @@
 
 <ul>
 
-- 指令寻址：寻找 <span style="color: black;">下一条</span>将要执行的指令<span style="color: DarkRed;">地址
-- 数据寻址：寻找 <span style="color: black;">本条</span>指令的数据~
+- 指令寻址：
+  - 寻找 <span style="color: black;">下一条</span>将要执行的指令<span style="color: DarkRed;">地址
+- 数据寻址：
+  - 寻找 <span style="color: black;">本条</span>指令的数据~
 
 </ul>
 
@@ -35,12 +37,12 @@
 通过<span style="color: green;">转移</span><span style="color: gray;">类</span>指令实现
   - 定义
     - 由本条指令 <span style="color: black;">给出下条</span>指令<span style="color: DarkRed;">地址</span>的计算方式
-    - 是否跳跃可能受到 <span style="color: Gold;">状态</span>R的控制
+    - 是否跳跃可能受到 <span style="color: Gold;">状态</span> <span style="color: LimeGreen;">R</span>的控制
   - 方式
     - <span style="color: gray;">绝对</span>转移
       - 地址码 <span style="color: black;">直接</span>指出转移目标地址
     -  <span style="color: GreenYellow;">相对</span>转移
-      - 地址码指出转移目的地址 <span style="color: black;">相对于当前</span>PC值的偏移量
+        - 地址码指出转移目的地址 <span style="color: black;">相对于当前</span>PC值的偏移量
   - 转移指令执行结果
     - 修改PC值
     - CPU根据PC的内容去主存取下一条指令
@@ -73,13 +75,13 @@
         - 通过形式地址和寻址方式计算得出
 - (<span style="color: DarkRed;">A</span>)位数的决定作用
   - <span style="color: LightSkyBlue;">立即</span>寻址
-    - 操作数的范围
+    -  <span style="color: LimeGreen;">OP</span>的范围
   -  <span style="color: black;">直接</span>寻址
       - 可寻址的范围
   -  <span style="color: LimeGreen;">R</span>寻址
-     - 通用R的最大<span style="color: gray;">数量</span>
+     - 通用R' 最大<span style="color: gray;">数量</span>
   -  <span style="color: LimeGreen;">R</span><span style="color: gray;">间接</span>寻址
-     - R的位数决定可寻址的范围
+     - R的位数decide可寻址的范围
 >attention: 
 
 （A）表示地址为A的数值
