\寻址'check留\ swiftrem_汇编: R_格式_常用3I(data传送_算术&逻辑_control流)+  3语句 (if-else←选择_do-while、while、for←循环_caller、add、过程调用)

--- a/re_knowledge/🖋️指令系统/🔎程序' 机器级代码表示/过程调用的机器级表示.md
+++ b/re_knowledge/🖋️指令系统/🔎程序' 机器级代码表示/过程调用的机器级表示.md
@@ -18,7 +18,8 @@
       - 为自己的非静态局部变量分配空间
   - 过程执行
     -  <span style="color: black;">执行</span>过程 <span style="color: black;">Q</span>
-  - 
+  <br>
+
   - 现场 <span style="color: GreenYellow;">恢复</span>与空间<span style="color: green;">释放</span>
     - Q恢复P的现场
     - 将返回结果放到P能访问到的地方
@@ -38,7 +39,8 @@
 
  <span style="color: silver;">
 
-- 定义：每个过程都有自己的栈区，称为栈帧
+- 定义：
+  - 每个过程都有自己的栈区，称为栈帧
 - 组成：
   - 一个 <span style="color: Gold;">栈</span>由若干<span style="color: Gold;">栈</span><span style="color: orange;">帧</span><span style="color: silver;">组成
 - 关键R：
@@ -56,30 +58,43 @@
  <span style="color: silver;">
 
 #### <span style="color: gray;">C语言
-- int add（int x, int y）{ 
-  - return x+y 
-- int caller(){ 
-  - int temp1 = 125
-  - int temp2 = 80
-  - int sum = add(temp1,temp2）
-  - return sum
+<ul>
+
+  ```c
+  int add(int x, int y) {
+      return x + y;
+  }
+
+  int caller() {
+      int temp1 = 125;
+      int temp2 = 80;
+      int sum = add(temp1, temp2);
+      return sum;
+  }
+  ```
+</ul>
 
 ####  <span style="color: LimeGreen;">caller  <span style="color: silver;">汇编
 - caller过程对应的代码如下：
   - caller:
-    - push ebp
-    - mov ebp,esp
-    - sub esp,24
-    - mov[ebp-12],125
-    - mov[ebp-8],80
-    - mov eax,dword ptr [ebp-8]
-    - mov[esp+4],eax
-    - mov eax,dword ptr[ebp-12]
-    - mov[esp],eax
-    - call add
-    - mov[ebp-4],eax
-    - mov eax,dword ptr[ebp-4]
-    - leave
+  ```nasm
+  push ebp
+  mov ebp, esp
+  sub esp, 24
+
+  mov [ebp-12], 125    ; M[R[ebp]-12] ← 125，即 temp1=125
+  mov [ebp-8], 80      ; M[R[ebp]-8] ← 80，即 temp2=80
+  mov eax, dword ptr [ebp-8]   ; R[eax] ← M[R[ebp]-8]，即 R[eax]=temp2
+  mov [esp+4], eax     ; M[R[esp]+4] ← R[eax]，即 temp2 入栈
+  mov eax, dword ptr [ebp-12]  ; R[eax] ← M[R[ebp]-12]，即 R[eax]=temp1
+  mov [esp], eax       ; M[R[esp]] ← R[eax]，即 temp1 入栈
+
+  call add             ; 调用 add，将返回值保存在 eax 中
+  mov [ebp-4], eax     ; M[R[ebp]-4] ← R[eax]，即 add 返回值送 sum
+  mov eax, dword ptr [ebp-4]   ; R[eax] ← M[R[ebp]-4]，即 sum 作为返回值
+  leave
+  ret
+  ```
 
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/d980c64caf10e8c75223e749aaa0890e4e8f054132e40c8f446ccc6806ddab98.jpg)  
 图4.12caller add  
@@ -91,17 +106,19 @@
 
 ####  <span style="color: Gold;">add</span> <span style="color: silver;"> 汇编
 - add过程经GCC编译并链接后的代码：
-  - 8048469:55 push ebp
-  - 804846a:89e5 mov ebp,esp
-  - 804846c:8b450c mov eax,dword ptr [ebp+12]
-  - 804846f:8b5508 mov edx,dword ptr [ebp+8]
-  - 8048472:8d0402 lea eax,[edx+eax]
-  - 8048475:5d pop ebp
-  - 8048476:c3 ret
+```nasm
+8048469: 55                   push ebp
+804846a: 89 e5                mov ebp, esp
+804846c: 8b 45 0c             mov eax, dword ptr [ebp+12]
+804846f: 8b 55 08             mov edx, dword ptr [ebp+8]
+8048472: 8d 04 02             lea eax, [edx+eax]
+8048475: 5d                   pop ebp
+8048476: c3                   ret
+```
 
 </ul>
 
-###  <span style="color: silver;">过程的<span style="color: LightSkyBlue;">代码</span><span style="color: Gold;">组成</span>部分
+###  <span style="color: silver;">过程的 机器级<span style="color: LightSkyBlue;">代码</span><span style="color: Gold;">组成</span>部分
 
 <ul>
 
