--- a/re_knowledge/🖋️指令系统/🔎程序' 机器级代码表示/选择语句的机器级表示.md
+++ b/re_knowledge/🖋️指令系统/🔎程序' 机器级代码表示/选择语句的机器级表示.md
@@ -23,22 +23,29 @@
   - or, and
   - shl, inc, dec, not, sal等
 - 特殊指令：
-  - cmp和test指令只设置条件码
+  - cmp和test指令only设置条件码
   - 不改变任何其他寄存器
-- jcondition条件转跳指令根据条件码ZF和SF来实现转跳
+- jcondition条件转跳指令
+  - 根据条件码ZF和SF来实现转跳
 
 ### if-else
 
 <ul>
 
 ####  <span style="color: silver;">通用形式
-- if( <span style="color: black;">test_expr</span>) then_statement else else_statement
+  ```
+  if(test_expr)
+    then_statement 
+  else 
+    else_statement
+  ```
 - 特点：
   - test_expr是 <span style="color: black;">整数表达式
   - 取值为0（假）或非0（真）
   - 两个分支语句只执行一个
 
-#### goto语句形式转换
+####  <span style="color: silver;">goto语句形式转换
+*goto语句 即 JMP
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/99de2ec0647f045fd562ae8b7c72c2a534fddb8bc8716ce24718f9784d401682.jpg)  
 
 </ul>
@@ -50,10 +57,19 @@
 ####  <span style="color: silver;">C语言
 
 ```cpp
-int get_cont(int *p1, int *p2)
-if(p1>p2) return *p2;
-else return *p1;
+int get_cont(int *p1, int *p2){
+  if(p1>p2) 
+    return *p2;
+  else 
+    return *p1;
+}
 ```
+
+####  <span style="color: silver;">汇编代码
+- 已知条件：
+  - p1和p2对应实参已压入调用函数的栈帧
+  - 存储地址：R[ebp]+8和R[ebp]+12
+
 
 ####  <span style="color: silver;">汇编代码
 - 已知条件：
@@ -63,18 +79,17 @@ else return *p1;
   - 返回结果存放在EAX中
 
 - 具体代码：
-```
-mov eax,dword ptr [ebp+8]    #R[eax]←M[R[ebp]+8],即R[eax]=p1
-mov edx,dword ptr [ebp+12]   #R[edx]←M[R[ebp]+12],即R[edx]=p2
-cmp eax,edx                  #比较p1和p2，即根据p1-p2的结果置标志
-jbe .L1                      #若p1<=p2，则转标记L1处执行
-mov eax,dword ptr [edx]      #R[eax]←M[R[edx]],即R[eax]=M[p2]
-jmp .L2                      #无条件跳转到标记L2执行
-.L1:
-mov eax,dword ptr [eax]      #R[eax]←M[R[eax]],即R[eax]=M[p1]
-.L2:
-
-```
+  ```nasm
+  mov eax,dword ptr [ebp+8]    ;R[eax]←M[R[ebp]+8],即R[eax]=p1
+  mov edx,dword ptr [ebp+12]   ;R[edx]←M[R[ebp]+12],即R[edx]=p2
+  cmp eax,edx                  ;比较p1和p2，即根据p1-p2的结果置标志
+  jbe .L1                      ;若p1<=p2，则转标记L1处执行
+  mov eax,dword ptr [edx]      ;R[eax]←M[R[edx]],即R[eax]=M[p2]
+  jmp .L2                      ;无条件跳转到标记L2执行
+  .L1:
+  mov eax,dword ptr [eax]      ;R[eax]←M[R[eax]],即R[eax]=M[p1]
+  .L2:
+  ```
 - 说明：
   - 指针参数：
     - p1和p2是指针型参数
