--- a/re_knowledge/🖋️指令系统/🔎程序' 机器级代码表示/循环语句的机器级表示.md
+++ b/re_knowledge/🖋️指令系统/🔎程序' 机器级代码表示/循环语句的机器级表示.md
@@ -9,9 +9,10 @@
  <span style="color: silver;">
 
 ###  <span style="color: silver;">概述
-- 常见的循环结构语句有while、for和do-while
-- <span style="color: gray;">汇编</span>中<span style="color: gray;">无</span>相应的指令存在
-  - 可以用  <span style="color: Gold;">条件</span>测试和<span style="color: green;">转跳</span>组合起来实现循环效果
+- 常见的循环结构语句:
+  - while、for和do-while
+- <span style="color: gray;">汇编</span>中 <span style="color: gray;">无</span>相应的指令存在
+  - <span style="color: Gold;">条件</span>测试 + <span style="color: green;">转跳</span>组合起来实现循环效果
   - 大多数编译器将这三种循环结构都转换为 <span style="color: black;">do-while</span>形式来产生机器代码
 - 在循环结构中，通常使用 <span style="color: Gold;">条件</span> <span style="color: LimeGreen;">转移</span>指令来判断循环条件的结束
 
@@ -19,19 +20,25 @@
 
 <ul>
 
-#### do-while
+####  <span style="color: silver;">do-<span style="color: LightSkyBlue;">while
 - 通用形式：
-  - do body_statement while(test_expr);
+  ```
+  do 
+    body_statement 
+    while(test_expr);
 - goto语句形式：
-  - loop: body_statement
-  - t = test_expr;
-  - if(t) goto loop;
+  ```
+  loop: 
+  body_statement
+  t = test_expr;
+  if(t) 
+    goto loop;
 - 特点：
   - body_statement至少执行一次
   - 然后执行测试表达式
   - 若测试为真，则继续执行循环
 
-#### while
+#### <span style="color: LightSkyBlue;">while</span>
 - 通用形式：
   - while(test_expr) body_statement
 - 转换为do-while形式：
@@ -47,11 +54,10 @@
   - if(t) goto loop;
   - done:
 
-#### for
+####  <span style="color: LimeGreen;">for</span>
 - 通用形式：
   - for(init_expr; test_expr; update_expr)
-
-![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/c59e1434ff34a9f2d84130def9419a860a7e3cf1681145df32fe17e1ef02bf32.jpg)  
+  - body_statement
 
 - 等价while循环形式：
   - init_expr;
@@ -76,13 +82,15 @@
 <ul>
 
 #### <span style="color: LightSkyBlue;">函数<span style="color: silver;">代码
-- int nsum_for(int n){
-  - int i;
-  - int result = 0;
-  - for(i=1; i<=n; i++)
-    - result += i;
-  - return result;
-}
+  ```c
+  int nsum_for(int n) {
+    int i;
+    int result = 0;
+    for (i = 1; i <= n; i++)
+        result += i;
+    return result;
+  }
+  ```
 
 ####  <span style="color: LimeGreen;">循环
 - init_expr: i = 1
@@ -98,17 +106,17 @@
   - 返回参数在E<span style="color: DarkRed;">A</span>X中
 
 - 具体代码：
-  ```
-  mov ecx,dword ptr [ebp+8]    #R[ecx]←M[R[ebp]+8]，即R[ecx]=n
-  mov eax,0                    #R[eax]←0,即result=0
-  mov edx,1                    #R[edx]←1，即i=1
-  cmp edx,ecx                  #Compare R[edx]:R[ecx]，即比较i:n
-  jg L2                        #If greater，转跳到L2执行
-  .L1:                         #loop:
-  add eax,edx                  #R[eax]←R[eax]+R[edx], 即result+=i
-  add edx,1                    #R[edx]←R[edx]+1，即i++
-  cmp edx,ecx                  #比较R[edx]和R[ecx]，即比较i:n
-  jle .L1                      #If less or equal，转跳到L1执行
+  ```nasm
+  mov ecx,dword ptr [ebp+8]    ;R[ecx]←M[R[ebp]+8]，即R[ecx]=n
+  mov eax,0                    ;R[eax]←0,即result=0
+  mov edx,1                    ;R[edx]←1，即i=1
+  cmp edx,ecx                  ;Compare R[edx]:R[ecx]，即比较i:n
+  jg L2                        ;If greater，转跳到L2执行
+  .L1:                         ;loop:
+  add eax,edx                  ;R[eax]←R[eax]+R[edx], 即result+=i
+  add edx,1                    ;R[edx]←R[edx]+1，即i++
+  cmp edx,ecx                  ;比较R[edx]和R[ecx]，即比较i:n
+  jle .L1                      ;If less or equal，转跳到L1执行
   .L2:
   ```
 
