1/3 swift 0 数制&码制_定点数'编码表示_left: 原 反 补 +移

--- a/re_knowledge/z_I O/0 I O 接口/功能.md
+++ b/re_knowledge/z_I O/0 I O 接口/功能.md
@@ -5,15 +5,17 @@
 <ul>
 
 - I/O接口的作用：
-  - 作为主机和外设之间的交接界面。
-  - 实现主机与外设之间的信息交换。
+  - as 主机和外设之间
+    - 交接界面。
+  - 实现主..
+    - 信息交换
 
 - 外设的多样性：
-  - 外设种类繁多，具有不同的工作特性。
-  - 在工作方式、数据格式和工作速度等方面存在差异。
+  - 外设种类繁多，have 不同的工作特性
+  - 在工作方式、数据格式和工作速度等方面存在差异
 
-- I/O接口的必要性：
-  - 为了解决外设之间的差异而设置。
+- 必要性：
+  - 解决外设之间的差异
 
 ## <span style="color: orange;">功能</span>
 
