--- a/re_knowledge/z数据的表示与运算/0 数制与编码/进位计数制及其相互 转换.md
+++ b/re_knowledge/z数据的表示与运算/0 数制与编码/进位计数制及其相互 转换.md
@@ -129,7 +129,7 @@
     - 商为0时结束
   
 
-![image](https://bluejedis.github.io/picx-images-hosting/test/image.58hfjs247f.webp)
+![image](https://bluejedis.github.io/picx-images-hosting/计组/image.6f0wtgykrq.png)
 
 因此整数部分 $123\,{=}\,(1111011)_{2},$  
 
