--- a/re_knowledge/z数据的表示与运算/0 数制与编码/⭐定点数的编码表示.md
+++ b/re_knowledge/z数据的表示与运算/0 数制与编码/⭐定点数的编码表示.md
@@ -84,7 +84,7 @@
 
 </ul>
 
-###  <span style="color: silver;"> <span style="color: GreenYellow;">原</span>码、 <span style="color: Gold;">补</span>码、 <span style="color: GreenYellow;">反</span>码、 <span style="color: LimeGreen;">移</span>码
+###  <span style="color: silver;"> <span style="color: GreenYellow;">⭐原</span>码、 <span style="color: Gold;">补</span>码、 <span style="color: GreenYellow;">反</span>码、 <span style="color: LimeGreen;">移</span>码
 
 <ul>
 
@@ -231,7 +231,7 @@ $$
 
 </ul>
 
-####   <span style="color: silver;"><span style="color: green;">移</span>码
+####   ⭐<span style="color: silver;"><span style="color: green;">移</span>码[^1]
 
 <ul>
 
@@ -239,6 +239,7 @@ $$
   - represent浮点数阶码
   - only表示整数
   - 在<span style="color: LightSkyBlue;">真值</span>上+偏置值(通常为2ⁿ)
+> ⭐机器字长 取n+1
 - 数学定义
   - [x]移=2ⁿ+x，-2ⁿ≤x<2ⁿ
 - 示例
@@ -250,7 +251,9 @@ $$
 
 <ul>
 
-- 零表示唯一：[+0]移=[-0]移=100...0
+- 零表示唯一：
+  - [+0]移=[-0]移=100...0 
+    - (n个0)
 - 与补码关系：符号位取反即可相互转换
 - 边界值特点
   - 全0对应最小值-2ⁿ
@@ -299,3 +302,8 @@ $$
 
 </div>
 <div style="clear: both;"></div>
+
+
+[^1]:
+    - If 字长=$2^n$
+      - bias=$2^{n-1}$
