2/3 swift 0 数制&码制_进制&&整数'表示_left: short ←→ unsigned short

--- a/re_knowledge/z数据的表示与运算/0 数制与编码/⭐定点数的编码表示.md
+++ b/re_knowledge/z数据的表示与运算/0 数制与编码/⭐定点数的编码表示.md
@@ -46,12 +46,13 @@
 
 - 纯小数
 - 小数点位置约定
-  - 在符号位之后
-  - 有效数值部分最高位之前
-- 数据形式：X=x₀.x₁x₂...xₓ
-  - x₀为符号位
-  - x₁~xₙ是数值的有效部分(尾数)
-  - x₁为最高有效位
+  - after符号位
+  - before 有效数值部分最高位
+- 数据形式：
+  - X=x₀.x₁x₂...xₓ
+    - x₀为符号位
+    - x₁~xₙ是数值的有效部分(尾数)
+    - x₁为最高有效位
 
 </ul>
 
@@ -60,7 +61,7 @@
 <ul>
 
 - 小数点位置约定
-  - 在有效数值部分最低位之后
+  - after有效数值部分最低位
 - 数据形式：X=x₀x₁x₂...xₙ
   - x₀为符号位
   - x₁~xₙ是尾数
@@ -71,11 +72,11 @@
 
 - note:
   - 机器内部数据:
-    - 没有实际小数点存在
+    - NO实际小数点存在
     - 小数点位置特性
       - 完全由人为约定
-    - 数据处理特点
-      - 编码和运算时无需区分小数或整数
+    - 数据处理特点:
+      - 编码和运算时无需区分 小数or整数[^1]
       - 只需关注两个要素
         - 符号位
         - 数值位
@@ -231,7 +232,7 @@ $$
 
 </ul>
 
-####   ⭐<span style="color: silver;"><span style="color: green;">移</span>码[^1]
+####   ⭐<span style="color: silver;"><span style="color: green;">移</span>码[^2]
 
 <ul>
 
@@ -303,7 +304,41 @@ $$
 </div>
 <div style="clear: both;"></div>
 
-
 [^1]:
+    在计算机中，编码和运算时无需严格区分小数和整数，主要是因为：
+
+    1. **统一的二进制表示**  
+      所有数据（整数、小数、字符等）最终都以二进制形式存储。例如：
+      - 整数 `5` 表示为 `0101`
+      - 小数 `5.0` 在浮点数中可能表示为符号位+指数位+尾数位的组合，但底层仍是二进制序列。
+
+    2. **运算器的通用性**  
+      CPU的算术逻辑单元（ALU）通过指令区分运算类型，而非数据本身。例如：
+      - `ADD` 指令处理整数加法
+      - `FADD` 指令处理浮点数加法
+      硬件根据指令自动选择对应的运算电路。
+
+    3. **类型系统由软件层管理**  
+      高级语言（如C/Python）中的数据类型在编译/解释阶段会被转换为底层通用格式。例如：
+      ```c
+      int a = 5;       // 编译为整数指令
+      float b = 5.0;   // 编译为浮点指令
+      ```
+      最终都变成机器码操作二进制数据。
+
+    4. **IEEE 754的兼容设计**  
+      浮点数标准包含整数兼容表示，如：
+      - `3.0` 的浮点表示与整数 `3` 的位模式不同，但通过浮点运算规则仍可正确计算。
+
+    5. **隐式类型转换**  
+      多数语言支持自动类型转换，如：
+      ```python
+      a = 5 + 2.3  # 整数5自动转为浮点数5.0
+      ```
+      底层实际执行的是浮点加法。
+
+    关键点：区分发生在**语义层**（程序员可见的逻辑类型），而非**物理层**（硬件处理的二进制流）。这种抽象极大简化了计算机系统设计。
+
+[^2]:
     - If 字长=$2^n$
       - bias=$2^{n-1}$
