--- a/re_knowledge/z数据的表示与运算/0 数制与编码/整数的表示.md
+++ b/re_knowledge/z数据的表示与运算/0 数制与编码/整数的表示.md
@@ -4,47 +4,50 @@
 
 <ul>
 
-###  <span style="color: silver;"><span style="color: SlateBlue;">无</span> <span style="color: Gold;">符号</span>~
+###  <span style="color: silver;">unsigned~
 
 <ul>
 
 >pro：机器码与补码、无符号数之间的转换（2021）  
 
-- concept
-  - 全部二进制位均为数值位，无符号位
-  - 默认数的符号为正
-  - 相同字长下能表示的最大数比有符号整数大
-- 场景
-  - 全部是正数运算且不出现负值结果的场合
-  - 地址运算
-  - 指针表示
-- eg(8位)
-  - 最小数：00000000（值为0）
-  - 最大数：11111111（值为255）
-  - 表示范围：0~255
+####  <span style="color: silver;">concept
+  - all二进制位
+    - 数值位，<span style="border: 1px solid black; padding: 5px; display: inline-block;">NO符号位</span>
+  - <span style="border-bottom: 1px dotted black;">默认</span>数的符号: <span style="border-bottom: 1px dotted black;">+<span style="border-bottom: 1px dotted black;">
+  - 相同字长下
+    - 表示的max数<span style="border: 1px solid black; padding: 5px; display: inline-block;">$>$</span>有符号整数大
+####  <span style="color: silver;">Scene
+  - all正数运算&不出现负值结果:
+    - 地址运算
+    - 指针表示
+####  <span style="color: silver;"> eg(8位)
+  - 最小数：00000000（0）
+  - 最大数：11111111（255）
+  - range：<span style="border: 1px solid black; padding: 5px; display: inline-block;">$0  \sim 2^n-1$</span>
 
 </ul>
 
-###  <span style="color: silver;">有  <span style="color: Gold;">符号</span>
+###  <span style="color: silver;"><span style="color: Gold;">signed</span>
 
 <ul>
 
-- concept
-  - 将符号数值化
-  - 符号位放在有效数字前面
--  <span style="color: Gold;">补</span>码表示~'优势
-     - ①与原码和反码相比
-       - 补码多表示一个最小负数
-       - 0的补码表示唯一
-     - ②与原码和移码相比
-       - 补码运算规则简单
-       - 符号位 与 数值位  <span style="color: GreenYellow;">一起</span>参加运算
+####  <span style="color: silver;">concept
+  - symbol数值化
+  - 符号位before有效数字
+####  <span style="color: silver;"><span style="color: Gold;">补</span>码表示~'优势
+   - ①与原码和反码相比
+     - 补码多<span style="border-bottom: 1px dotted black;">表示一个</span>最小负数
+     - 0的补码表示<span style="border-bottom: 1px dotted black;">唯一</span>
+   - ②与原码和移码相比
+     - 补码运算规则<span style="border-bottom: 1px dotted black;">简单</span>
+     - 符号位 与 数值位  <span style="border-bottom: 1px dotted black;"><span style="color: GreenYellow;">一起</span></span>参加运算
 
-- n位有符号整数表示范围：$-2^{n-1}$ ~$ 2^{n-1}-1$
+####  <span style="color: silver;">n位有符号整数表示range：
+- <span style="border: 1px solid black; padding: 5px; display: inline-block;">$-2^{n-1}$ ~$ 2^{n-1}-1$</span>
 
 </ul>
 
-###  <span style="color: silver;"><span style="color: green;">C</span>语言中的整数类型及类型转换  
+###  <span style="color: silver;"><span style="color: green;">C</span>语言中的整数类型&类型转换  
 
 <ul>
 
@@ -54,24 +57,26 @@
 
 >pro：int型数据的表示范围（2017、2019）  
 
-- 整型数据分类(按位数)
-  - 字符型(char)：8位
+#####  <span style="color: silver;"> 整型数据分类(按位数)
+  - 字符型(<span style="border: 1px solid black; padding: 5px; display: inline-block;">char</span>)：8位
+<br>
+
   - 短整型(short/short int)：16位
-  - 整型(int)：32位
+  - 整型(<span style="border: 1px solid black; padding: 5px; display: inline-block;">int</span>)：32位
   - 长整型(long/long int)
     - 32位机器：32位
     - 64位机器：64位
-- 特殊说明
-  - char默认无符号整数
-  - short/int/long默认有符号整数
-- 存储形式
-  - signed/unsigned都按补码存储
-  - signed最高位为符号位
-  - unsigned全部为数值位
+#####   <span style="color: silver;">Symbol default: unsigned & signed
+  - char默认 <span style="border-bottom: 1px dotted black;">NO符号</span>整数
+  - short/int/long默认 <span style="border-bottom: 1px dotted black;">有</span>符号整数
+#####  <span style="color: silver;">存储形式
+  - signed(有symbol type)/unsigned(无..)
+    - 按<span style="border: 1px solid black; padding: 5px; display: inline-block;">补码</span>存储
+
 
 </ul>
 
-####  <span style="color: silver;"><span style="color: SlateBlue;">有</span>/无 <span style="color: Gold;">符号</span>数' <span style="color: LimeGreen;">转换  
+####  <span style="color: silver;">⚠️signed <span style="color: LimeGreen;">←→</span>unsigned
 
 <ul>
 
@@ -110,8 +115,9 @@
 >attention： 若同时有无符号数和有符号数参与运算，则C语言标准规定按无符号数进行运算。  
 
 </ul>
+</ul>
 
-####  <span style="color: silver;">不同<span style="color: gray;">字长</span>整数之间的转换  
+####  <span style="color: silver;">不同<span style="color: gray;">字长</span>整数之间' convert  
 
 <ul>
 
@@ -122,9 +128,13 @@
 <ul>
 
 - principle
-  - 多余高位直接截断
-  -  <span style="color: LimeGreen;">低</span>位直接赋值
-  - 保持位值不变
+  <span style="border: 1px solid black; padding: 5px; display: inline-block;">
+  - 多余高位  截断
+  -  <span style="color: LimeGreen;">低</span>位 赋值
+  
+</span>
+
+  - keep位值不变
 
 </ul>
 
@@ -133,15 +143,16 @@
 <ul>
 
 - principle
-  - 保持相应位值相等
-  - 高位部分扩展处理
-    - 无符号整数：零扩展
+  - keep相应位值相等
+  - 高位部分 扩展处理
+  <span style="border: 1px solid black; padding: 5px; display: inline-block;">
+    - unsigned整数：零 扩展
     - 有~：符号扩展
 
 >pro：无符号数的零扩展（2012），补码的符号扩展（2021）  
 
 - 特殊说明
-  - char型(8位无符号整数)转int型时高位补0
+  - char型(8位无符号整数)→ int型时高位补0
 
 </ul>
 
