--- a/re_knowledge/z数据的表示与运算/0 数制与编码/进位计数制及其相互 转换.md
+++ b/re_knowledge/z数据的表示与运算/0 数制与编码/进位计数制及其相互 转换.md
@@ -6,22 +6,22 @@
 
 >pro：采用二进制编码的原因（2018）  
 
-###  <span style="color: silver;">二进制编码的原因
+###  <span style="color: silver;">the reason of 二进制编码
 
 <ul>
 
-- 两种状态
+- 两种<span style="border-bottom: 1px dotted black;">状态
   - use有两个稳定状态的物理器件:
     - 制造成本低
       - <span style="color: LightSkyBlue;">高</span> <span style="color: LimeGreen;">低</span>电平表示0和1
       - 电荷正负极性表示0和1
--  <span style="color: Gold;">逻辑</span>
+-  <span style="border-bottom: 1px dotted black;"><span style="color: Gold;">逻辑</span>
      - 1 "真"
      - 0 "假" 
      - 便于实现
        - 逻辑运算
        - 程序逻辑判断
-- 规则简单
+- <span style="border-bottom: 1px dotted black;">规则</span>简单
   - <span style="color: deepskyblue;">编码</span>、 <span style="color: LimeGreen;">运算</span> 规则简单
   - 逻辑门电路 实现算术运算
 
@@ -35,13 +35,14 @@
 
 <ul>
 
-- <span style="color: LightSkyBlue;">基</span>数
-  - 每个数位所用到的不同数码的个数
+<span style="color: LimeGreen;">r</span>进制数
+   - $K_{n}r^{n}+K_{n-1}r^{n-1}+\dots+K_{0}r^{0}+K_{-1}r^{-1}+\dots+K_{-m}r^{-m}=\sum_{i=n}^{-m}K_{i}\boxed{r^{i}}$
+- <span style="color: LightSkyBlue;">基</span>数 <span style="border-bottom: 1px dotted black;">$r$</span>
+  - 每个数位所用到的不同digit的 <span style="border: 1px solid black; padding: 5px; display: inline-block;">个数</span>
   - 十进制的基数为10(0~9)，"逢十进一"
-- <span style="color: gray;">位</span> <span style="color: Gold;">权</span>
-  - 每个数码所表示的数值 = 该数码本身 × 所在数位的<span style="color: gray;">位</span><span style="color: Gold;">权
--  <span style="color: LimeGreen;">r</span>进制数
-     - $K_{n}r^{n}+K_{n-1}r^{n-1}+\dots+K_{0}r^{0}+K_{-1}r^{-1}+\dots+K_{-m}r^{-m}=\sum_{i=n}^{-m}K_{i}r^{i}$
+- <span style="color: gray;">位</span><span style="color: Gold;">权</span>(bit weight) <span style="border-bottom: 1px dotted black;">$r^{i}$</span>
+  - 每个数码(digital)所表示'<span style="border: 1px solid black; padding: 5px; display: inline-block;">数值</span> = 该数码<u>本身</u> × 所在数位的<span style="color: gray;">位</span><span style="color: Gold;">权
+
 
 </ul>
 
@@ -50,17 +51,22 @@
 <ul>
 
 - <span style="color: LightSkyBlue;">二</span>
-  - 基数为2，只有0和1两种数码
+  - 基数为<span style="border: 1px solid black; padding: 5px; display: inline-block;">2</span>
+    - 0和1 ← 2个digits
   - "逢二进一"
-  - 位权为2^i
+  - $\boxed{2^i}$
 -  <span style="color: Gold;">八</span>
-     - 基数为8，有0~7共8个数码
+     - 8
+       - 0~7 8个digits
      - "逢八进一"
-     - r=8=2^3，3位二进制对应1位八进制
+     - 8=2^3
+       - <u>3位</u> 二进制 = 1位八进制
 -  <span style="color: LimeGreen;">十六</span>
-     - 基数为16，有0~9、A~F共16个数码
+     - <span style="border: 1px solid black; padding: 5px; display: inline-block;">16</span>
+       - 0~ 9、A ~F 16个digits
      - "逢十六进一"
-     - r=16=2^4，4位二进制对应1位十六进制
+     - 16=2^4
+       - <u>4位</u> 二进制 = 1位十六进制
 
 </ul>
 
@@ -74,24 +80,33 @@
 
 <ul>
 
-- method:
+- ⭐method:
   - 以"."为界
-    - 整数部分：向左分组
-    - 小数部分：向右分组
-  - 八进制：3位一组
-  - 十六进制：4位一组
+    - 整数：<span style="border: 1px solid black; padding: 5px; display: inline-block;">← </span>
+      - 向左分组
+    - 小数：<span style="border: 1px solid black; padding: 5px; display: inline-block;">→</span>
+      - ..右..
+
+<span style="border: 1px solid black; padding: 5px; display: inline-block;">
+
+  - 八进制：3位 a group
+  - 十六：4.. 
+  
+</span>
+
   - 必要时补0
+
 <br>
 
-【例2.1】将二进制数1111000010.01101分别转换为八进制数和十六进制数。  
+#####  <span style="color: silver;">【eg】将二进制数1111000010.01101分别转换为八进制数和十六进制数:  
 
 解：  
 
-高位补0，凑足3位分界点低位补0，凑足3位↓ ↓ ↓ 001 111 000 010 011 010  
+高位补0，凑足3位分界点低位补0，凑足3位 001 111 000 010 011 010  
 
-所以，对应的八进制数为 $(1702.32)_{8}\!=\!(1111000010.01101)_{2}\!\circ$  
+∴  $(1702.32)_{8}\!=\!(1111000010.01101)_{2}$  
 
-所以，对应的十六进制数为 $(3C2.68)_{16}\!=\!(1111000010.01101)_{2}.$  
+$(3C2.68)_{16}\!=\!(1111000010.01101)_{2}$  
 
 </ul>
 
@@ -110,11 +125,11 @@
 
 >pro：十进制小数转换为二进制小数（2021、2022）  
 
-- 基数乘除法
+- 基数乘除法<span style="border: 1px solid black; padding: 5px; display: inline-block;">
   - <span style="color: LightSkyBlue;">整</span>数部分：<span style="color: SlateBlue;">除</span>基取 <span style="color: LimeGreen;">余</span>法
-  - <span style="color: gray;">小数</span>部分： <span style="color: Gold;">乘</span>基取 <span style="color: Gold;">整</span>法
+  - <span style="color: gray;">小数</span>..： <span style="color: Gold;">乘</span>基取 <span style="color: Gold;">整</span>法</span>
 
-【例2.2】将十进制数123.6875转换成二制数。  
+#####  <span style="color: silver;">【eg】将十进制数123.6875转换成二制数
 
 解：  
 
@@ -129,7 +144,7 @@
     - 商为0时结束
   
 
-![image](https://bluejedis.github.io/picx-images-hosting/计组/image.6f0wtgykrq.png)
+<span style="border: 1px solid black; padding: 5px; display: inline-block;">![image](https://bluejedis.github.io/picx-images-hosting/计组/image.6f0wtgykrq.png)</span>
 
 因此整数部分 $123\,{=}\,(1111011)_{2},$  
 
@@ -145,9 +160,10 @@
        - 或满足精度要求时结束
 小数部分：  
 
-![image](https://bluejedis.github.io/picx-images-hosting/test/image.32i0y0eg14.webp) 
+<span style="border: 1px solid black; padding: 5px; display: inline-block;">![image](https://bluejedis.github.io/picx-images-hosting/test/image.32i0y0eg14.webp) </span>
 
-因此小数部分 $0.6875\!=\!(0.1011)_{2}$ ，所以 $123.6875\!=\!(1111011.1011)_{2}.$  
+小数部分 $0.6875\!=\!(0.1011)_{2}$ 
+∴ $123.6875\!=\!(1111011.1011)_{2}$  
 
 </ul>
 
