swifttest_0 数制&码制_进制&定点数编码&整数

--- a/re_knowledge/z数据的表示与运算/0 数制与编码/进位计数制及其相互 转换.md
+++ b/re_knowledge/z数据的表示与运算/0 数制与编码/进位计数制及其相互 转换.md
@@ -144,7 +144,7 @@ $(3C2.68)_{16}\!=\!(1111000010.01101)_{2}$
     - 商为0时结束
   
 
-<span style="border: 1px solid black; padding: 5px; display: inline-block;">![image](https://bluejedis.github.io/picx-images-hosting/计组/image.6f0wtgykrq.png)</span>
+<span style="border: 1px solid black; padding: 5px; display: inline-block;">![image](https://bluejedis.github.io/picx-images-hosting/计组/image.41ybxd44cb.png)</span>
 
 因此整数部分 $123\,{=}\,(1111011)_{2},$  
 
