--- a/re_knowledge/z数据的表示与运算/1 运算方法 & 运算电路/组成 运算 部件.md
+++ b/re_knowledge/z数据的表示与运算/1 运算方法 & 运算电路/组成 运算 部件.md
@@ -43,11 +43,12 @@
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/b08b1b2e0864197bdd1d72ef2052e0df883af964dc46d02ed1cabeaf47084dfc.jpg)  
 图2.3用全加器实现 $n$ 位带标志加法器的电路  
 
-- 标志位的逻辑表达式：
-  - 溢出标志：${\mathrm{OF}}=C_{n}\oplus C_{n-1}$
-  - 符号标志：$\mathrm{SF}=F_{n-1}$
-  - 零标志：$\mathrm{ZF}=1$ 当且仅当 $F\!=\!0$
-  - 进位/借位标志：$\mathrm{CF}=C_{\mathrm{out}}\oplus C_{\mathrm{in}^{\mathrm{c}}}$
+####  <span style="color: silver;">标志位的逻辑表达式：[^1]
+- 溢出Overflow：<span style="border: 1px solid black; padding: 5px; display: inline-block;">${\mathrm{OF}}$$=C_{n}\oplus C_{n-1}$[^2]
+- 符号Sign：$\mathrm{SF}=F_{n-1}$
+- 零Zero：$\mathrm{ZF}=1$ 当且仅当 $F\!=\!0$
+- 进位/借位Carry forward： ← unsigned num
+  - $\mathrm{CF}=C_{\mathrm{out}}\oplus C_{\mathrm{in}}$
 
 </ul>
 
@@ -57,9 +58,9 @@
 
 -  <span style="color: Gold;">特点</span>：
      - 功能较强的组合逻辑电路
-     - 能进行多种算术运算和逻辑运算
-     - 核心是带标志加法器
-     - 能执行"与""或""非"等逻辑运算
+       - 多种 算术运算&逻辑运算
+     - 核心: 带标志加法器
+     - 能执行"与""或""非"etc 逻辑运算
 
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/9cdde373a0e9aac54e8a3252d040b0625dc2982eaa7ffb7b834dd4a5f48a2d34.jpg)  
 图2.4ALU的基本结构  
@@ -67,9 +68,9 @@
 - ALU基本 <span style="color: LimeGreen;">结构</span>：
   - 输入端：
     - A和B（n位操作数）
-    - Cin（进位输入端）
+    - <span style="border: 1px solid black; padding: 5px; display: inline-block;">Cin</span>（进位输入端）
   - 控制端：
-    - ALUop（决定执行功能）
+    - <span style="border: 1px solid black; padding: 5px; display: inline-block;">ALUop</span>（决定执行功能）
     - ALUop位数决定操作种类
 
 ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/446801d26dabb23d19fea7dea7846e8892b38051dc1408e8f16cf0921912b209.jpg)  
@@ -83,3 +84,124 @@
 
 </div>
 <div style="clear: both;"></div>
+
+[^1]:
+    这些运算法则是计算机体系结构中用于标志寄存器（Flag Register）的状态位，主要用于反映算术或逻辑运算后的结果状态
+    
+    ---
+
+    ### 1. **溢出（Overflow, OF）**
+    - **公式**：$\mathrm{OF} = C_n \oplus C_{n-1}$  [先看[2] $\oplus$异或](#异或)
+      - **含义**：表示有符号数的运算结果是否超出了数据类型的表示范围（即溢出）。  
+      - **原理**：  
+        - $C_n$ 是最高位的进位（即符号位的进位）。  
+        - $C_{n-1}$ 是次高位的进位（即数值部分向符号位的进位）。  
+        - 如果符号位的进位和数值部分向符号位的进位**不同**（异或结果为1），说明有符号数的运算结果溢出。  
+      - **示例**：  
+        对于8位有符号数（补码表示）：  
+        - `127 + 1 = 128`（实际结果为`-128`，溢出）。  
+        - 此时 $C_n \neq C_{n-1}$，$\mathrm{OF}=1$。
+
+    ---
+
+    ### 2. **符号（Sign, SF）**
+    - **公式**：$\mathrm{SF} = F_{n-1}$  
+      - **含义**：表示运算结果的最高位（符号位）是否为1（即是否为负数）。  
+      - **原理**：  
+        - 对于有符号数，最高位（$F_{n-1}$）是符号位。  
+        - $\mathrm{SF}=1$ 表示结果为负，$\mathrm{SF}=0$ 表示结果为正。  
+      - **示例**：  
+        - 8位数 `10000011`（二进制）的 $\mathrm{SF}=1$（表示负数）。  
+        - 8位数 `00000011` 的 $\mathrm{SF}=0$（表示正数）。
+
+    ---
+
+    ### 3. **零（Zero, ZF）**
+    - **公式**：$\mathrm{ZF}=1$ 当且仅当 $F=0$  
+      - **含义**：表示运算结果是否为0。  
+      - **原理**：  
+        - 如果所有位均为0，则 $\mathrm{ZF}=1$；否则 $\mathrm{ZF}=0$。  
+      - **示例**：  
+        - `3 - 3 = 0` 时，$\mathrm{ZF}=1$。  
+        - `3 + 1 = 4` 时，$\mathrm{ZF}=0$。
+
+    ---
+
+    ### 4. **进位/借位（Carry, CF）**
+    - **公式**：$\mathrm{CF} = C_{\mathrm{out}} \oplus C_{\mathrm{in}}$  
+      - **含义**：表示无符号数的运算是否产生了进位（加法）或借位（减法）。  
+      - **原理**：  
+        - **加法**：$C_{\mathrm{out}}$ 是最高位的进位，$C_{\mathrm{in}}$ 是运算的初始进位（通常为0）。  
+          - 如果最高位有进位，$\mathrm{CF}=1$。  
+        - **减法**：通过补码转换为加法，$C_{\mathrm{in}}=1$（借位标志）。  
+          - 如果最高位无进位，$\mathrm{CF}=1$（表示借位）。  
+      - **示例**：  
+        - 8位无符号数 `255 + 1 = 256`（实际结果为0），最高位进位 $\mathrm{CF}=1$。  
+        - 8位无符号数 `0 - 1 = -1`（借位），$\mathrm{CF}=1$。
+
+    ---
+
+    ### 关键区别
+    - **OF vs CF**：  
+      - **OF** 针对有符号数，判断结果是否超出范围（如 `127 + 1 = -128`）。  
+      - **CF** 针对无符号数，判断是否进位/借位（如 `255 + 1 = 0`）。  
+    - **SF vs ZF**：  
+      - **SF** 仅关注符号位，**ZF** 关注整个结果是否为0。
+
+[^2]:
+    \(\oplus\) 表示**异或（XOR，Exclusive OR）**运算
+
+    ---
+
+    ### 定义 (#异或)
+    对于两个二进制位 \(A\) 和 \(B\)，异或的结果为：  
+    \[
+    A \oplus B = 
+    \begin{cases} 
+    0 & \text{如果 } A = B \text{（两数相同）}, \\
+    1 & \text{如果 } A \neq B \text{（两数不同）}.
+    \end{cases}
+    \]
+
+    #### 真值表：
+    | \(A\) | \(B\) | \(A \oplus B\) |
+    |-------|-------|----------------|
+    | 0     | 0     | 0              |
+    | 0     | 1     | 1              |
+    | 1     | 0     | 1              |
+    | 1     | 1     | 0              |
+
+    ---
+
+    ### **在标志位公式中的具体应用**
+    1. **溢出标志（OF）**  
+      \(\mathrm{OF} = C_n \oplus C_{n-1}\)  
+      - 最高位进位 \(C_n\) 和次高位进位 \(C_{n-1}\) **不同时**，\(\mathrm{OF}=1\)（表示有符号数溢出）。
+
+    2. **进位标志（CF）**  
+      \(\mathrm{CF} = C_{\mathrm{out}} \oplus C_{\mathrm{in}}\)  
+      - 对于加法（\(C_{\mathrm{in}}=0\)），直接等于最高位进位 \(C_{\mathrm{out}}\)。  
+      - 对于减法（补码运算中 \(C_{\mathrm{in}}=1\)），需反转 \(C_{\mathrm{out}}\) 表示借位。
+
+    ---
+
+    ### **异或运算的其他特性**
+    - **位运算性质**：  
+      - 交换律：\(A \oplus B = B \oplus A\)  
+      - 结合律：\(A \oplus (B \oplus C) = (A \oplus B) \oplus C\)  
+      - 自反性：\(A \oplus A = 0\)，\(A \oplus 0 = A\)  
+
+    - **应用场景**：  
+      - 加密算法（如一次性密码本）。  
+      - 校验和（如奇偶校验）。  
+      - 汇编语言中的掩码操作（如翻转特定位）。
+
+    ---
+
+    ### **与普通逻辑 OR（\(\lor\)）的区别**
+    - **OR（或）**：只要有一个输入为1，结果就是1（包含性）。  
+    - **XOR（异或）**：必须严格一个为0、一个为1，结果才是1（排他性）。  
+
+    例如：  
+    \(1 \lor 1 = 1\)，但 \(1 \oplus 1 = 0\)。
+
